# frb_search

./: CMakeLists.txt  README.md  build.sh  frbsearchlib.pc.in
apps/: Makefile  calcstat.cpp  main.cpp  main_dedisperse_fits.cpp  main_dynaspec.cpp  main_find_sources.cpp  main_inject_frb.cpp  main_inject_frb_complex.cpp  main_show_dm_pixels.cpp  main_test.cpp  main_test_dynaspec.cpp  read_data_cube.cpp  read_data_cube_test.cpp  test.cpp
doc/: 20250826_How_to_create_dynamic_spectra.odt  How_to_create_dynamic_spectra.odt
scripts/: process_frb_search.sh  process_frb_search_all.sh  timeseries_all.sh
scripts/dynamic_spectra/: blink_dedispersed_timeseries.sh  blink_dynamic_spectrum.sh
src/: dedisp_search.cpp  dedisp_search.h  frb_generator.cpp  frb_generator.h  mwa_fits.cpp  mwa_fits.cpp~  mwa_fits.h  pixel.h  round_test.cpp  sources.cpp  sources.h
